# TERMINAL-THEATRE

./: .gitignore  ASCII_ART_INTEGRATION.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  MANIFEST.in  PLAYER.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  ascii-art-cookbook-framework.md  automated_playtest.py  main.py  pyproject.toml  setup.py  test_blood_and_neon.py  test_opening_comprehensive.py
.github/workflows/: publish.yml
engine/: __init__.py  animation.py  colors.py  game.py  input_handler.py  opening.py  renderer.py  save_manager.py  settings.py  story.py
stories/: BLOOD_AND_NEON_ART_README.md  BLOOD_AND_NEON_README.md  __init__.py  blood_and_neon.py  blood_and_neon_art.py  noir_detective.py
stories/shadow_slave/: README.md  __init__.py  shadow_slave_art.py  shadow_slave_story.py
tests/: test_art_display.py  test_game.py  test_opening.py
